--- a/package.json
+++ b/package.json
@@ -101,7 +101,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "netlify": "netlify"
   },
   "browserslist": {
     "production": [
