--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-masonry-component": "^6.3.0",
     "react-masonry-css": "^1.0.16",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-player": "^2.16.0",
     "react-quilljs": "^1.3.3",
     "react-rangeslider": "^2.2.0",
     "react-rating": "^2.0.5",
